// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Immutable.Map {
  "did": "mock did",
}
`;

exports[`account reducer should initialize correctly 1`] = `
Immutable.Map {
  "did": "",
}
`;
